[FIX] Facturacion
Se modifica la facturacion para que ya no se genere factura con cada cobro
Se permite facturar multiples ingresos
